<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yerevan Transport</string>
    <string name="search_from">Starting point</string>
    <string name="search_to">Destination</string>
    <string name="find_route">Find Route</string>
    <string name="no_route_found">No route found between these stops</string>
    <string name="loading">Loading…</string>
    <string name="direct_route">Direct Route</string>
    <string name="with_transfer">Route with Transfer</string>
    <string name="transfer_at">Transfer at: %s</string>
    <string name="walk_distance">Walk: %d meters</string>
    <string name="estimated_time">Est. time: %d min</string>
    <string name="route_number">Route %s</string>
    <string name="map">Map</string>
    <string name="routes">Routes</string>
    <string name="stops">Stops</string>
    <string name="loading_data">Loading transport data…</string>
    <string name="data_loaded">Data loaded successfully</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="retry">Retry</string>
    <string name="swap_locations">Swap locations</string>
</resources>
